# hgraph

./: .gitignore  COMPILING.md  N1000E4995.adj  N1000E4995.adj.atr  N1500E11243.adj  N1500E11243.adj.atr  N2000E19990.adj  N2000E19990.adj.atr  N500E1284.adj  N500E1284.adj.atr  README.md  README.txt  benchmark.sh  hgraph  hgraph.cabal  sampledata.adj  sampledata.adj.atr  sampledata.p  sampledata10.adj  sampledata10.adj.atr  sampledata100.adj  sampledata100.adj.atr  sampledata200.adj  sampledata200.adj.atr  sampledata300.adj  sampledata300.adj.atr
doc/ausarbeitung/: amdahl_analysis.ods  benchmark_edit.ods  benchmark_raw.txt  hgraph.bib  hgraph_doc.tex
doc/ausarbeitung/img/: hgraph_parallel_diagram.vsdx
references/pseudocode/: pseudocode.tex
src/: DCB.hs  DCB_acc.hs  Main.hs  Util.hs
src/DCB/: DCB.hs  IO.hs  Structures.hs
