name: hgraph
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable hgraph
    build-depends: QuickCheck -any, Stream -any, accelerate -any,
                   base -any, bytestring -any, deepseq -any, ghc -any, monad-par -any,
                   parallel -any, text -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -threaded -rtsopts -eventlog
 
test-suite test-hgraph
    build-depends: QuickCheck -any, Stream -any, accelerate -any,
                   base -any, bytestring -any, deepseq -any, ghc -any, monad-par -any,
                   parallel -any, text -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
    ghc-options: -threaded -rtsopts -eventlog