name: hgraph
version: 0.0.1
cabal-version: >= 1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable hgraph
    build-depends: 
                   QuickCheck -any,
                   Stream -any,
                   accelerate -any,
                   base -any,
                   bytestring -any,
                   deepseq -any,
                   ghc -any,
                   monad-par >=0.3.4,
                   parallel -any,
                   repa >=3.2,
                   text -any,
                   transformers >=0.3.0,
                   vector >=0.10.9
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: DCB
    ghc-options: -eventlog -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3
    extensions:    
                   BangPatterns, 
                   DoAndIfThenElse
 
test-suite test-hgraph
    build-depends: QuickCheck -any, Stream -any, accelerate -any,
                   base -any, bytestring -any, deepseq -any, ghc -any,
                   monad-par >=0.3.4, parallel -any, repa >=3.2, text -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
    ghc-options: -threaded -rtsopts -eventlog