name: hgraph
version: 0.0.1
cabal-version: >= 1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable hgraph
    build-depends: 
                   QuickCheck -any,
                   bytestring -any,
                   bytestring-lexing -any,
                   deepseq -any,
                   ghc -any,
                   time >=1.2,
                   parallel -any,
                   repa >=3.2,
                   transformers >=0.3.0,
                   vector >=0.7,
                   mtl >=2.1 && <3,
                   containers >=0.5.0 && <0.6,
                   base >=4.6.0 && <4.7
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: 
                   Util,
                   DCB.DCB,
                   DCB.Structures,
                   DCB.IO
    if os(windows) {
        ghc-options: -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3
	} else {
        ghc-options: -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3 -fllvm
	}
    extensions:    
                   BangPatterns, 
                   DoAndIfThenElse
 
test-suite test-hgraph
    build-depends: 
                   QuickCheck -any, bytestring -any, bytestring-lexing -any,
                   deepseq -any, ghc -any, time >=1.2,
                   parallel -any, repa >=3.2,
                   containers >=0.5.0 && <0.6,
                   base >=4.6.0 && <4.7
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
    ghc-options: -threaded -rtsopts -eventlog
    other-modules: 
                   Util,
                   DCB.Structures,
                   DCB.DCB,
                   DCB.IO
